--- a/now.json
+++ b/now.json
@@ -1,8 +1,15 @@
 {
   "builds": [
     {
-      "src": "server.js",
+      "src": "index.js",
       "use": "@now/node-server"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/index.js",
+      "methods": ["GET"]
     }
   ]
 }
