--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "license": "MIT",
   "dependencies": {
     "compression": "git+https://github.com/patrickmichalina/compression.git",
+    "compression-no-br": "git+https://github.com/expressjs/compression.git",
+    "devcert": "^1.0.0",
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "no-br": "NO_BR=1 node index.js"
   }
 }
